alignment issues and new mh productivity post

--- a/assets/css/tufte.css
+++ b/assets/css/tufte.css
@@ -776,6 +776,7 @@ body {
     font-size: 1.8rem;
     font-weight: 400;
     margin: 0;
+    margin-left: 12.5%;
 }
 
 .site-title a {
@@ -784,6 +785,12 @@ body {
 }
 
 /* Nav links on the right --------------------------------------------- */
+.site-nav {
+    margin-left: auto;
+    margin-right: 12.5%;
+    text-align: right;
+}
+
 .site-nav a {
     margin-left: 1.6rem;
     font-size: 1.2rem;
@@ -837,8 +844,15 @@ body {
         width: 84%;
     }
 
+    .site-title {
+        margin-left: 0;
+    }
+
     .site-nav {
         margin-top: 0.4rem;
+        margin-left: 0;
+        margin-right: 0;
+        text-align: left;
     }
 
     .site-nav a {
